<resources>
    <string name="app_name">AllNetworks School App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_role_to_get_started">Select your role to get started</string>
    <string name="teacher">Teacher</string>
    <string name="welcome">Welcome!</string>
    <string name="signInContinue">Sign in to continue</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="passwordHint">Password</string>
    <string name="logIn">Log in</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="grades">Grades</string>
    <string name="attendance">Attendance</string>
    <string name="time_table">Time Table</string>
    <string name="assignment">Assignment</string>
    <string name="terms_and_conditions">Terms &amp; Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="my_classes">My Classes</string>
    <string name="_60_min">60 min</string>
    <string name="free_period">Free period</string>
    <string name="assignments">Assignments</string>
    <string name="create">create</string>
    <string name="dot">•</string>
    <string name="chapter_6_practice_problems">Chapter 6 - Practice Problems</string>
    <string name="due_date">Due Date</string>
    <string name="total_marks">Total Marks</string>
    <string name="marks">Marks</string>
    <string name="solve_all_problems_from_exercise_5_3_and_5_4_show_full_working_for_each_step">Solve all problems from Exercise 5.3 and 5.4. Show full working for each step.</string>
    <string name="_0_100_submitted">0 / 100 submitted</string>
    <string name="quick_actions">Quick actions</string>
    <string name="view_submissions">View submissions</string>
    <string name="delete">Delete</string>
    <string name="submissions">Submissions</string>
    <string name="submitted">Submitted</string>
    <string name="graded">Graded</string>
    <string name="download_file">download file</string>
    <string name="student_list">Student list</string>
    <string name="student_summary">Student summary</string>
    <string name="student_summary2">Student Summary</string>
    <string name="student_list2">Student List</string>
    <string name="save_attendance">Save Attendance</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="welcome_to_home_screen">Welcome to Home Screen</string>
    <string name="fee_management">Fee Management</string>
    <string name="outstanding_balance">Outstanding Balance</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="late">Late</string>
    <string name="attendance_rate">Attendance Rate</string>
    <string name="home_work">Home Work</string>
    <string name="weekly_progress">Weekly Progress</string>

</resources>