<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.allnetworks.allnetworks_school_management_system.views.parent.attendance.ParentAttendanceVM" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/warm_off_white"
        android:orientation="vertical">

        <!-- toolbar -->
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="22dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewModel::onClick}"
                    app:srcCompat="@drawable/ic_back" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center"
                android:text="@string/submissions"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="submissions"
                android:visibility="invisible"
                app:srcCompat="@drawable/info_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TV30dpInterMedium"
                            android:text="20"
                            android:textColor="@color/blackShadeTransparent"
                            tools:text="20" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/present"
                            android:textAlignment="center"
                            android:textColor="@color/light_gray"
                            android:textSize="13sp"
                            tools:text="Present" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TV30dpInterMedium"
                            android:text="20"
                            android:textColor="@color/transparent_red"
                            tools:text="20" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/absent"
                            android:textAlignment="center"
                            android:textColor="@color/light_gray"
                            android:textSize="13sp"
                            tools:text="Absent" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TV30dpInterMedium"
                            android:text="20"
                            android:textColor="@color/blue"
                            tools:text="20" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/late"
                            android:textAlignment="center"
                            android:textColor="@color/light_gray"
                            android:textSize="13sp"
                            tools:text="Late" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="22dp">

                    <LinearLayout
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TV14dpInterMedium"
                            android:text="@string/attendance_rate"
                            android:textColor="@color/textColor"
                            tools:text="Attendance Rate" />

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/totalStudentsProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"
                            android:max="100"
                            android:progress="90"
                            android:layout_marginVertical="8dp"
                            app:indicatorColor="@color/app_primary"
                            app:trackColor="#E0E0E0" />

                        <TextView
                            style="@style/TV14dpInterMedium"
                            android:text="22 of 24 school days"
                            android:textColor="@color/textColor"
                            tools:text="22 of 24 school days" />

                    </LinearLayout>


                    <TextView
                        style="@style/TV30dpInterMedium"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="90%"
                        android:textColor="@color/app_primary"
                        tools:text="90%" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>

</layout>