<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.allnetworks.allnetworks_school_management_system.views.teacher.teacherAssignment.viewAssignment.ViewAssignmentVM" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/warm_off_white"
        android:orientation="vertical"
        tools:context=".views.student.attendance.AttendanceFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- toolbar -->
                <LinearLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/layout_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/bg_circle"
                        android:backgroundTint="@color/white"
                        android:elevation="5dp"
                        android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{viewModel::onClick}"
                            app:srcCompat="@drawable/ic_back" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_semi_bold"
                        android:gravity="center"
                        android:text="View Assignment"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="25dp"
                        android:contentDescription="Tasks"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/info_2" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/lyperiodDetails"
                        style="@style/Widget.Material3.CardView.Outlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/lyAssignmentDetails"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/tvTotalTime"
                                        style="@style/TV12dpInterSemiBold"
                                        android:layout_marginEnd="10dp"
                                        android:backgroundTint="#E6E0F8"
                                        android:paddingHorizontal="5dp"
                                        android:paddingVertical="2dp"
                                        android:text="12 Apr"
                                        android:textColor="#5B3FD1"
                                        tools:text="Homework" />

                                    <TextView
                                        android:id="@+id/tvDueDate"
                                        style="@style/TV12dpInterSemiBold"
                                        android:layout_marginEnd="10dp"
                                        android:backgroundTint="#F4E3C1"
                                        android:paddingHorizontal="5dp"
                                        android:paddingVertical="2dp"
                                        android:text="Due: 12 Apr"
                                        android:textColor="#A66A00"
                                        tools:text="Due: 12 Apr" />

                                </LinearLayout>

                                <TextView
                                    android:id="@+id/tvTotalMarks"
                                    style="@style/TV12dpInterSemiBold"
                                    android:layout_marginTop="7dp"
                                    android:backgroundTint="#D9ECF6"
                                    android:paddingHorizontal="5dp"
                                    android:paddingVertical="2dp"
                                    android:text="50 marks"
                                    android:textColor="#2A7FA3"
                                    tools:text="50 marks" />


                                <TextView
                                    style="@style/TV16dpInterMedium"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/solve_all_problems_from_exercise_5_3_and_5_4_show_full_working_for_each_step" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2dp"
                                    android:layout_marginTop="18dp"
                                    android:background="@color/warm_off_white"
                                    />


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical">
                                        <TextView
                                            style="@style/TV30dpInterMedium"
                                            android:text="20"
                                            android:textColor="@color/blue"
                                            tools:text="20" />
                                        <TextView
                                            android:textAlignment="center"
                                            android:layout_width="70dp"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/inter"
                                            android:text="Submitted"
                                            android:textColor="@color/light_gray"
                                            android:textSize="13sp"
                                            tools:text="Submitted" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical">
                                        <TextView
                                            style="@style/TV30dpInterMedium"
                                            android:text="20"
                                            android:textColor="@color/transparent_red"
                                            tools:text="20" />
                                        <TextView
                                            android:textAlignment="center"
                                            android:layout_width="70dp"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/inter"
                                            android:text="Pending"
                                            android:textColor="@color/light_gray"
                                            android:textSize="13sp"
                                            tools:text="Pending" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical">
                                        <TextView
                                            style="@style/TV30dpInterMedium"
                                            android:text="20"
                                            android:textColor="@color/blackShadeTransparent"
                                            tools:text="20" />
                                        <TextView
                                            android:textAlignment="center"
                                            android:layout_width="70dp"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/inter"
                                            android:text="Graded"
                                            android:textColor="@color/light_gray"
                                            android:textSize="13sp"
                                            tools:text="Graded" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical">
                                        <TextView
                                            style="@style/TV30dpInterMedium"
                                            android:text="20"
                                            android:textColor="@color/red"
                                            tools:text="20" />
                                        <TextView
                                            android:textAlignment="center"
                                            android:layout_width="70dp"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/inter"
                                            android:text="Absent"
                                            android:textColor="@color/light_gray"
                                            android:textSize="13sp"
                                            tools:text="Absent" />
                                    </LinearLayout>
                                </LinearLayout>

                                <com.google.android.material.progressindicator.LinearProgressIndicator
                                    android:id="@+id/totalStudentsProgressBar"
                                    android:layout_width="wrap_content"
                                    android:layout_height="3dp"
                                    android:layout_marginTop="30dp"
                                    android:layout_weight="1"
                                    android:max="100"
                                    android:progress="60"
                                    app:trackColor="#E0E0E0" />

                                <TextView
                                    android:id="@+id/tvProgressText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/_0_100_submitted"
                                    android:textColor="@color/faded_light_black_color"
                                    android:textSize="16sp" />


                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        style="@style/TV12dpInterSemiBold"
                        android:layout_marginTop="12dp"
                        android:backgroundTint="@color/warm_off_white"
                        android:text="@string/quick_actions"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp">

                        <TextView
                            android:id="@+id/tvViewSubmissions"
                            style="@style/TV12dpInter"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/purple"
                            android:onClick="@{viewModel::onClick}"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="15dp"
                            android:text="@string/view_submissions"
                            android:textAlignment="center"
                            android:textColor="#4B3FBF"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvDeleteAssignment"
                            style="@style/TV12dpInter"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/green2"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="15dp"
                            android:text="@string/delete"
                            android:textAlignment="center"
                            android:textColor="#1E6F5C"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp">

                        <TextView
                            android:id="@+id/tvEditAssignment"
                            style="@style/TV12dpInter"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/Beige"
                            android:onClick="@{viewModel::onClick}"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="15dp"
                            android:text="Edit"
                            android:textAlignment="center"
                            android:textColor="@color/Brown"
                            android:textSize="16sp" />

                        <TextView
                            style="@style/TV12dpInter"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/warm_off_white"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="15dp"
                            android:textAlignment="center"
                            android:textColor="#1E6F5C"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>